--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 700px) {
     .body3 {
         width:550px;
         background-image: url(https://cdn.shopify.com/s/files/1/0160/2840/1712/products/stonks.png?v=1613027396);
@@ -25,6 +25,7 @@
 #stuff4 {
     text-align: left;
     font-family: fantasy;
+    width:fit-content;
     font-size: 20px;
     border:1px solid black;
     background-image: url(https://www.pikpng.com/pngl/b/57-578017_bitcoin-png-image-bitcoin-images-png-clipart.png);
@@ -44,6 +45,7 @@
         padding:-10px;
         color:blueviolet;
         text-decoration: underline;
+        width:fit-content;
         text-align:left;
         font-family: fantasy;
         text-decoration-color: black;
@@ -77,6 +79,146 @@
         box-shadow: -1px -1px 0 rgb(142, 16, 16), 1px -1px 0 rgb(30, 174, 187), -1px 1px 0 rgb(24, 205, 48), 1px 1px 0 rgb(226, 233, 37);
          
 }
+#meme {
+    width:250px;
+    height:195px;
+    display:block;
+    box-shadow: -1px -1px 0 rgb(142, 16, 16), 1px -1px 0 rgb(30, 174, 187), -1px 1px 0 rgb(24, 205, 48), 1px 1px 0 rgb(226, 233, 37);
+    
+}
+.getrich {
+    box-sizing: border-box;
+    border:2px solid black;
+    float:right;
+    font-size:0px;
+    display: inline;
+    left:320px;
+    text-shadow: -.5px -.5px 0 rgb(142, 16, 16), .5px -.5px 0 rgb(30, 174, 187), -.5px .5px 0 rgb(24, 205, 48), .5px .5px 0 rgb(226, 233, 37);
+    
+    
+}
+#clickbait {
+    margin-left:100px solid;
+    
+
+    writing-mode: vertical-lr;
+    text-orientation: upright;
+    display:inline;
+    letter-spacing: .01px .01px .01px .01px;
+    
+    position:absolute;
+}
+#topsecret {
+    margin-left: 200px;
+    font-size: 10px;
+    text-align: center;
+    box-sizing: border-box;
+    font-variant: small-caps;
+    font-family: monospace;
+    width:50px;
+    height:fit-content;
+    border:2px solid black;
+    margin-top:130px;
+    position:absolute;
+    float:right;
+    display:inline;
+    padding:-20px;
+    background-color: black;
+    color:darkgreen;
+    border-color:darkgreen;
+    letter-spacing: .09px;
+    box-shadow: -1px -1px 0 rgb(142, 16, 16), 1px -1px 0 rgb(30, 174, 187), -1px 1px 0 rgb(24, 205, 48), 1px 1px 0 rgb(226, 233, 37);
+    
+
+}
+#topsecret:hover {
+    text-decoration:underline;
+    
+    text-decoration-color:green;;
+    color:green;;
+    border-color:green;;
+    background-color: black;
+    box-shadow: -1px -1px 0 rgb(142, 16, 16), 1px -1px 0 rgb(30, 174, 187), -1px 1px 0 rgb(24, 205, 48), 1px 1px 0 rgb(226, 233, 37);
+}
+.getrich2 {
+    padding-bottom:-10px;
+    position:absolute;
+    font-size: 12px;
+    margin-left:35px;
+    font-variant: small-caps;
+    font-family: monospace;
+    text-align:right
+}
+#one {
+    font-size: 25px;
+    font-variant: small-caps;
+    font-family: monospace;
+    position:absolute;
+    margin-left:5px;
+    margin-top:-10px;
+
+}
+#finger {
+    position:absolute;
+    font-size:20px;
+    margin-left:40px;
+    margin-top:-8px;
+}
+#simple {
+    text-align:center;
+    position:absolute;
+    font-size:15px;
+    font-variant: small-caps;
+    font-family: monospace;
+    margin-left:60px;
+    margin-top:-13px;
+   
+}
+#trick {
+    position:absolute;
+    font-variant: small-caps;
+    font-family: monospace;
+    width:50px;
+    margin-left:65px;
+    margin-top:20px;
+    text-align:left;
+    font-size:13px;
+}
+#hate {
+    padding-top:80px;
+    padding-left:7.5px;
+   font-family:monospace;
+    font-size: 19px;
+    color:rgb(120, 5, 5);
+    letter-spacing:.05px .05px .05px .05px;
+    font-variant: small-caps;
+    position:absolute;
+    
+   
+}
+#him {
+    font-family:monospace;
+    padding-top:140px;
+    padding-left:20px;
+    font-weight: 900px;
+   
+    font-size: 13px;
+    letter-spacing: .09px;
+    font-variant: small-caps;
+    position: absolute;
+}
+#banker {
+    padding-top:0px;
+    font-family:monospace;
+    position:absolute;
+    font-size: 15px;
+   font-weight: 900px;
+   letter-spacing: .09px;
+   font-variant: small-caps;
+   
+   
+   
+}
 .link1:hover, .link2:hover, .link3:hover {
     text-decoration: underline;
     color:darkgoldenrod;
@@ -108,7 +250,7 @@
     
   }
 .wallet {
-    
+    width:fit-content;
     box-sizing: border-box 2px solid black;
     
  
@@ -130,7 +272,7 @@
         padding: 5px;
         background-color:rgb(217, 214, 199);
         box-shadow: -1px -1px 0 rgb(142, 16, 16), 1px -1px 0 rgb(30, 174, 187), -1px 1px 0 rgb(24, 205, 48), 1px 1px 0 rgb(226, 233, 37);
-        
+        width:min-content 300px;
     }
     #body {
         box-sizing: border-box;
@@ -161,7 +303,7 @@
 
 
 
-@media screen and (min-width:601px) {
+@media screen and (min-width:701px) {
     .body3 {
         width:1000px;
         background-image: url(https://cdn.shopify.com/s/files/1/0160/2840/1712/products/stonks.png?v=1613027396);
@@ -199,6 +341,7 @@
     #stuff4 {
                 text-align: left;
                 font-family: fantasy;
+                width:fit-content;
                 font-size: 60px;
                 border:2px solid black;
                 background-image: url(https://www.pikpng.com/pngl/b/57-578017_bitcoin-png-image-bitcoin-images-png-clipart.png);
@@ -218,6 +361,7 @@
     .yo {
                 color:blueviolet;
                 text-decoration: underline;
+                width:fit-content;
                 text-align:left;
                 font-family: fantasy;
                 font-size: 50px;
@@ -297,7 +441,7 @@
         
     .wallet {
                 box-sizing: border-box 2px solid black;
-                
+                width:fit-content;
                 margin:10px black;
                 background-image: url(https://cdn0.iconfinder.com/data/icons/financial-transaction/64/financial-transaction-qr-code-money-cash-1024.png);
                 background-size: 50px
@@ -305,6 +449,7 @@
     .stuff {
                 box-sizing: border-box;
                 font-size: 17px;
+                width:fit-content;
                 font-family: fantasy;
                 padding: 5px;
                 background-color:rgb(217, 214, 199);
@@ -347,6 +492,151 @@
                 padding-top:30px;
                 padding:20px
                 
+            }
+            #meme {
+                width:1000px;
+                height:780px;
+                display:block;
+                box-shadow: -1px -1px 0 rgb(142, 16, 16), 1px -1px 0 rgb(30, 174, 187), -1px 1px 0 rgb(24, 205, 48), 1px 1px 0 rgb(226, 233, 37);
+                
+                
+            }
+            .getrich {
+                box-sizing: border-box;
+                border:2px solid black;
+                float:right;
+                font-size:0px;
+                display: inline;
+                text-shadow: -.5px -.5px 0 rgb(142, 16, 16), .5px -.5px 0 rgb(30, 174, 187), -.5px .5px 0 rgb(24, 205, 48), .5px .5px 0 rgb(226, 233, 37);
+                margin-top:-300px;
+                margin-right:-800px;
+            }
+            #clickbait {
+                margin-left:100px solid;
+                
+            
+                writing-mode: vertical-lr;
+                text-orientation: upright;
+                display:inline;
+                letter-spacing: .01px .01px .01px .01px;
+                
+                position:absolute;
+            }
+            #topsecret {
+                margin-left: 799px;
+                font-size: 35px;
+                text-align: center;
+                box-sizing: border-box;
+                font-variant: small-caps;
+                font-family: monospace;
+                width:200px;
+                height:fit-content;
+                border:2px solid black;
+                margin-top:575px;
+                position:absolute;
+                float:right;
+                display:inline;
+                padding:-20px;
+                background-color: black;
+                color:darkgreen;
+                border-color:darkgreen;
+                letter-spacing: .09px;
+                box-shadow: -1px -1px 0 rgb(142, 16, 16), 1px -1px 0 rgb(30, 174, 187), -1px 1px 0 rgb(24, 205, 48), 1px 1px 0 rgb(226, 233, 37);
+                
+            
+            }
+            #topsecret:hover {
+                text-decoration:underline;
+                
+                text-decoration-color:green;;
+                color:green;;
+                border-color:green;;
+                background-color: black;
+                box-shadow: -1px -1px 0 rgb(142, 16, 16), 1px -1px 0 rgb(30, 174, 187), -1px 1px 0 rgb(24, 205, 48), 1px 1px 0 rgb(226, 233, 37);
+            }
+            .getrich2 {
+                margin-top:-10px;
+                position:absolute;
+                font-size: 60px;
+                margin-left:150px;
+                font-variant: small-caps;
+                font-family: monospace;
+                text-align:right
+            }
+            #one {
+                font-size: 110px;
+                font-variant: small-caps;
+                font-family: monospace;
+                position:absolute;
+                margin-left:20px;
+                margin-top:-80px;
+            
+            }
+            #finger {
+                position:absolute;
+                font-size:70px;
+                margin-left:20px;
+                margin-top:-60px;
+                width:300px;
+            }
+            #simple {
+                text-align:center;
+                position:absolute;
+                font-size:70px;
+                font-variant: small-caps;
+                font-family: monospace;
+                margin-left:120px;
+                margin-top:-61px;
+               
+            }
+            #simple1 {
+                text-decoration:double underline;
+            }
+           
+            #trick {
+                position:absolute;
+                font-variant: small-caps;
+                font-family: monospace;
+                width:220px;
+                margin-left:115px;
+                margin-top:80px;
+                text-align:center;
+                font-size:60px;
+            }
+            #hate {
+                padding-top:300px;
+                padding-left:25px;
+               font-family:monospace;
+                font-size: 90px;
+                color:rgb(120, 5, 5);
+                letter-spacing:.05px .05px .05px .05px;
+                font-variant: small-caps;
+                position:absolute;
+                
+               
+            }
+            #him {
+                font-family:monospace;
+                padding-top:550px;
+                padding-left:80px;
+                font-weight: 900px;
+               
+                font-size: 60px;
+                letter-spacing: .09px;
+                font-variant: small-caps;
+                position: absolute;
+            }
+            #banker {
+                padding-top:0px;
+                font-family:monospace;
+                position:absolute;
+                font-size: 65px;
+               font-weight: 900px;
+               letter-spacing: .09px;
+               font-variant: small-caps;
+               
+               
+               
             }
          
 }
