--- a/main.css
+++ b/main.css
@@ -79,24 +79,24 @@
         box-shadow: -1px -1px 0 rgb(142, 16, 16), 1px -1px 0 rgb(30, 174, 187), -1px 1px 0 rgb(24, 205, 48), 1px 1px 0 rgb(226, 233, 37);
          
 }
-#meme {
-    width:250px;
-    height:195px;
-    display:block;
-    box-shadow: -1px -1px 0 rgb(142, 16, 16), 1px -1px 0 rgb(30, 174, 187), -1px 1px 0 rgb(24, 205, 48), 1px 1px 0 rgb(226, 233, 37);
-    
-}
+
 .getrich {
     box-sizing: border-box;
     border:2px solid black;
     float:right;
     font-size:0px;
-    display: inline;
-    left:320px;
     text-shadow: -.5px -.5px 0 rgb(142, 16, 16), .5px -.5px 0 rgb(30, 174, 187), -.5px .5px 0 rgb(24, 205, 48), .5px .5px 0 rgb(226, 233, 37);
-    
-    
+    top:169px;
+    left:230px;
+    position: absolute;
+    background-image: url(https://i.kym-cdn.com/entries/icons/original/000/036/128/injusticecover.jpg);
+    background-size:300px 180px;
+    background-position: center;
+    width: 300px;
+    height: 200px;
+    box-shadow: -1px -1px 0 rgb(142, 16, 16), 1px -1px 0 rgb(30, 174, 187), -1px 1px 0 rgb(24, 205, 48), 1px 1px 0 rgb(226, 233, 37);
 }
+
 #clickbait {
     margin-left:100px solid;
     
@@ -105,32 +105,33 @@
     text-orientation: upright;
     display:inline;
     letter-spacing: .01px .01px .01px .01px;
-    
-    position:absolute;
+    text-shadow: -.5px -.5px 0 rgb(142, 16, 16), .5px -.5px 0 rgb(30, 174, 187), -.5px .5px 0 rgb(24, 205, 48), .5px .5px 0 rgb(226, 233, 37);
+    position:relative;
+    letter-spacing: .01px;
 }
+
+
 #topsecret {
-    margin-left: 200px;
-    font-size: 10px;
+    left: 445px;
+    font-size: 11.5px;
     text-align: center;
     box-sizing: border-box;
     font-variant: small-caps;
     font-family: monospace;
-    width:50px;
+    width:fit-content;
     height:fit-content;
     border:2px solid black;
-    margin-top:130px;
-    position:absolute;
-    float:right;
-    display:inline;
+    bottom:170px;
+    position:relative;
+    display:inline-block;
     padding:-20px;
     background-color: black;
     color:darkgreen;
     border-color:darkgreen;
     letter-spacing: .09px;
     box-shadow: -1px -1px 0 rgb(142, 16, 16), 1px -1px 0 rgb(30, 174, 187), -1px 1px 0 rgb(24, 205, 48), 1px 1px 0 rgb(226, 233, 37);
-    
-
 }
+
 #topsecret:hover {
     text-decoration:underline;
     
@@ -141,48 +142,55 @@
     box-shadow: -1px -1px 0 rgb(142, 16, 16), 1px -1px 0 rgb(30, 174, 187), -1px 1px 0 rgb(24, 205, 48), 1px 1px 0 rgb(226, 233, 37);
 }
 .getrich2 {
-    padding-bottom:-10px;
-    position:absolute;
-    font-size: 12px;
-    margin-left:35px;
+    right:120px;
+    position:relative;
+    font-size: 16px;
     font-variant: small-caps;
     font-family: monospace;
     text-align:right
 }
+
 #one {
     font-size: 25px;
     font-variant: small-caps;
     font-family: monospace;
-    position:absolute;
-    margin-left:5px;
-    margin-top:-10px;
-
+    position:relative;
+    left:89px;
+    bottom:24px;
+    
 }
 #finger {
-    position:absolute;
-    font-size:20px;
-    margin-left:40px;
-    margin-top:-8px;
+    position:relative;
+    font-size:15px;
+    left:74px;
+    bottom:26px;
+    width:40px;
 }
 #simple {
     text-align:center;
-    position:absolute;
-    font-size:15px;
+    position:relative;
+    font-size:16px;
     font-variant: small-caps;
     font-family: monospace;
-    margin-left:60px;
-    margin-top:-13px;
+    left:150px;
+    top:-35px;
    
 }
+#simple1 {
+    position:relative;
+    text-decoration:double underline;
+    right:51px;
+}
 #trick {
-    position:absolute;
+    position:relative;
     font-variant: small-caps;
     font-family: monospace;
     width:50px;
-    margin-left:65px;
-    margin-top:20px;
+    left:115px;
+    bottom:23px;
     text-align:left;
-    font-size:13px;
+    font-size:14.5px;
+    
 }
 #hate {
     padding-top:80px;
@@ -248,7 +256,7 @@
     font-size:10px;}
 
     
-  }
+  
 .wallet {
     width:fit-content;
     box-sizing: border-box 2px solid black;
@@ -297,10 +305,13 @@
     #our {
         font-style:italic
     }
-    
+    .something5 {
+        position:relative;
+     
+    }
     
 
-
+}
 
 
 @media screen and (min-width:701px) {
@@ -493,49 +504,47 @@
                 padding:20px
                 
             }
-            #meme {
-                width:1000px;
-                height:780px;
-                display:block;
-                box-shadow: -1px -1px 0 rgb(142, 16, 16), 1px -1px 0 rgb(30, 174, 187), -1px 1px 0 rgb(24, 205, 48), 1px 1px 0 rgb(226, 233, 37);
-                
-                
-            }
+           
+           
             .getrich {
                 box-sizing: border-box;
                 border:2px solid black;
                 float:right;
                 font-size:0px;
-                display: inline;
                 text-shadow: -.5px -.5px 0 rgb(142, 16, 16), .5px -.5px 0 rgb(30, 174, 187), -.5px .5px 0 rgb(24, 205, 48), .5px .5px 0 rgb(226, 233, 37);
-                margin-top:-300px;
-                margin-right:-800px;
+                top:20px;
+                left:650px;
+                position: absolute;
+                width: 1150px;
+                height: 780px;
+                background-image: url(https://i.kym-cdn.com/entries/icons/original/000/036/128/injusticecover.jpg);
+                box-shadow: -1px -1px 0 rgb(142, 16, 16), 1px -1px 0 rgb(30, 174, 187), -1px 1px 0 rgb(24, 205, 48), 1px 1px 0 rgb(226, 233, 37);
             }
             #clickbait {
                 margin-left:100px solid;
                 
-            
+                text-shadow: -.5px -.5px 0 rgb(142, 16, 16), .5px -.5px 0 rgb(30, 174, 187), -.5px .5px 0 rgb(24, 205, 48), .5px .5px 0 rgb(226, 233, 37);
                 writing-mode: vertical-lr;
                 text-orientation: upright;
                 display:inline;
                 letter-spacing: .01px .01px .01px .01px;
                 
-                position:absolute;
+                position:relative;
             }
             #topsecret {
-                margin-left: 799px;
-                font-size: 35px;
+                
+                font-size: 32px;
                 text-align: center;
-                box-sizing: border-box;
+                box-sizing: border-box square;
                 font-variant: small-caps;
                 font-family: monospace;
-                width:200px;
+                width:fit-content;
                 height:fit-content;
                 border:2px solid black;
-                margin-top:575px;
-                position:absolute;
-                float:right;
-                display:inline;
+                bottom:440px;
+                position:relative;
+                left:1590px;
+                display:inline-block;
                 padding:-20px;
                 background-color: black;
                 color:darkgreen;
@@ -556,52 +565,58 @@
             }
             .getrich2 {
                 margin-top:-10px;
-                position:absolute;
+                position:relative;
                 font-size: 60px;
-                margin-left:150px;
+                margin-right:450px;
                 font-variant: small-caps;
                 font-family: monospace;
-                text-align:right
+                text-align:right;
+
             }
             #one {
                 font-size: 110px;
                 font-variant: small-caps;
                 font-family: monospace;
-                position:absolute;
-                margin-left:20px;
-                margin-top:-80px;
+                position:relative;
+                
+                margin-right:-400px;
+                bottom:85px;
             
             }
             #finger {
-                position:absolute;
+                position:relative;
                 font-size:70px;
-                margin-left:20px;
-                margin-top:-60px;
+                left:330px;
+                bottom:90px;
                 width:300px;
             }
             #simple {
-                text-align:center;
-                position:absolute;
+                text-align:-5px;
+                position:relative;
                 font-size:70px;
+                
                 font-variant: small-caps;
                 font-family: monospace;
-                margin-left:120px;
-                margin-top:-61px;
+                left:630px;
+                bottom:125px;
                
             }
-            #simple1 {
-                text-decoration:double underline;
-            }
+         #simple1 {
+             position: relative;
+             right:180px;
+             text-decoration: double underline;
+             text-shadow: -.5px -.5px 0 rgb(142, 16, 16), .5px -.5px 0 rgb(30, 174, 187), -.5px .5px 0 rgb(24, 205, 48), .5px .5px 0 rgb(226, 233, 37);
+         }
            
             #trick {
-                position:absolute;
+                position:relative;
                 font-variant: small-caps;
                 font-family: monospace;
-                width:220px;
-                margin-left:115px;
-                margin-top:80px;
+                width:100px;
+                left:444px;
+                bottom:80px;
                 text-align:center;
-                font-size:60px;
+                font-size:55px;
             }
             #hate {
                 padding-top:300px;
@@ -639,5 +654,8 @@
                
             }
          
+         .getrich2 {
+             position:relative
+         }
 }
 
